# fronthacks

./: package-lock.json
backend/: app.db  app.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: app.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: LoginPage.tsx  MapComponent.tsx  RegisterPage.tsx  ThankYouPage.tsx
