[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elfrunner28 <kartispotify@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
sqlitecloud = "^0.0.83"
airtable = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
